# ufs-coastal-app

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  Externals.cfg  LICENSE.md  README.md  build.sh  build_deps.sh  environment.yml
.github/workflows/: container.yaml
containers/slurm/: Dockerfile  README.md  entrypoint.sh  slurm.conf  slurmdbd.conf
containers/spack-stack/: Dockerfile  README.md
doc/: Makefile  README.md  requirements.txt
doc/source/: BuildingAndRunning.rst  Configurations.rst  Introduction.rst  PortingModel.rst  Workflow.rst  conf.py  index.rst  introduction.rst  porting.rst
templates/: cdeps.streams  cdeps_streams  config.yaml  model_configure  param.nml  schism_param_nml  schism_param_nml.j2  stream.jinja2  ufs.configure
tests/: coastal_ike_shinnecock_atm2sch.yaml
ush/: coastal.py  coastal.yaml  run_tests.sh
ush/schism/: gen_bctides.py  gen_bnd.py  gen_gr3.py  gr3.py  schism.jsonschema
ush/utils/cdeps/: cdeps.jsonschema
ush/utils/data/: create_esmf_mesh.py  esmf.py  get_herbie.py  get_hrrr.py  get_input.py  get_s3.py  get_wget.py  shared.py
ush/utils/schism/: gen_bctides.py  gen_bnd.py  gen_gr3.py  schism.jsonschema  utils.py
versions/main/doctrees/: BuildingAndRunning.doctree  Configurations.doctree  Introduction.doctree  PortingModel.doctree  environment.pickle  index.doctree
versions/main/html/: .buildinfo  BuildingAndRunning.html  Configurations.html  PortingModel.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
versions/main/html/_sources/: index.rst.txt
